--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=datingapp.db"
-  }
+  },
+
+  "TokenKey": "super secret unguessable key super secret super hard to find never guessable too long"
 }
